tests/suite/fail/types/string_sub_int.ny
fn main() {
    let x = "abc"
    x - 1 //~ ERROR Invalid operation on string
}
